challenge Type None -> Static
